Update bat files